--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,90 +34,65 @@ li {
   list-style: none;
 }
 
-/* SIDEBAR */
-#sidebar {
-  position: fixed;
-  max-width: 260px;
-  width: 100%;
+.dropdown {
+  position: absolute;
+  top: calc(100% + 10px);
   background: var(--light);
-  top: 0;
-  left: 0;
-  height: 100%;
-  overflow-y: auto;
-  scrollbar-width: none;
-  transition: all 0.3s ease;
-  z-index: 200;
-}
-#sidebar.hide {
-  max-width: 60px;
-}
-#sidebar.hide:hover {
-  max-width: 260px;
-}
-#sidebar::-webkit-scrollbar {
-  display: none;
-}
-#sidebar .brand {
-  font-size: 24px;
-  display: flex;
-  align-items: center;
-  height: 64px;
-  font-weight: 700;
-  color: var(--blue);
-  position: sticky;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  background: var(--light);
-  transition: all 0.3s ease;
-  padding: 0 6px;
-}
-#sidebar .icon {
-  min-width: 48px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 6px;
-}
-#sidebar .icon-right {
-  margin-left: auto;
-  transition: all 0.3s ease;
-}
-#sidebar .side-menu {
-  margin: 36px 0;
-  padding: 0 20px;
-  transition: all 0.3s ease;
-}
-#sidebar.hide .side-menu {
-  padding: 0 6px;
-}
-#sidebar.hide:hover .side-menu {
-  padding: 0 20px;
-}
-#sidebar .side-menu a {
-  display: flex;
-  align-items: center;
-  font-size: 14px;
-  color: var(--dark);
-  padding: 12px 16px 12px 0;
-  transition: all 0.3s ease;
+  padding: 10px 0;
+  box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-  margin: 4px 0;
-  white-space: nowrap;
-}
-#sidebar .side-menu > li > a:hover {
-  background: var(--grey);
-}
-#sidebar .side-menu > li > a.active .icon-right {
-  transform: rotateZ(90deg);
-}
-#sidebar .side-menu > li > a.active,
-#sidebar .side-menu > li > a.active:hover {
-  background: var(--blue);
-  color: var(--light);
+  width: 160px;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s ease;
 }
 
-/* SIDEBAR */
+.profile-link {
+  right: 0;
+}
+
+.more-link {
+  z-index: 10;
+}
+
+form.more {
+  position: relative;
+}
+
+.more-ic {
+  cursor: pointer;
+}
+
+.show.profile-link,
+.show.more-link {
+  opacity: 1;
+  pointer-events: visible;
+  top: 100%;
+}
+
+.profile-link li a,
+.more-link li button {
+  padding: 10px 16px;
+  display: flex;
+  grid-gap: 10px;
+  font-size: 14px;
+  color: var(--dark);
+  align-items: center;
+  transition: all 0.3s ease;
+  text-transform: capitalize;
+  cursor: pointer;
+}
+
+.more-link li button {
+  width: 100%;
+  border: none;
+  background-color: transparent;
+}
+
+.profile-link li a:hover,
+.more-link li button:hover {
+  background: var(--grey);
+}
 
 /* CONTENT */
 #content {
@@ -130,125 +105,76 @@ li {
   width: calc(100% - 60px);
   left: 60px;
 }
-/* NAVBAR */
-nav {
-  background: var(--light);
-  height: 64px;
-  padding: 0 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  grid-gap: 28px;
-  position: sticky;
-  top: 0;
-  left: 0;
-  z-index: 100;
-}
-nav .toggle-sidebar {
-  font-size: 18px;
-  cursor: pointer;
-}
-nav .profile {
-  position: relative;
-  display: flex;
-  align-items: center;
-}
-nav .profile p {
-  font-weight: bold;
-  margin-right: 10px;
-}
-nav .profile img {
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  object-fit: cover;
-  cursor: pointer;
-}
-nav .profile .profile-link {
-  position: absolute;
-  top: calc(100% + 10px);
-  right: 0;
-  background: var(--light);
-  padding: 10px 0;
-  box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  width: 160px;
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.3s ease;
-}
-nav .profile .profile-link.show {
-  opacity: 1;
-  pointer-events: visible;
-  top: 100%;
-}
-nav .profile .profile-link li {
-  padding: 10px 16px;
-  display: flex;
-  grid-gap: 10px;
-  font-size: 14px;
-  color: var(--dark);
-  align-items: center;
-  transition: all 0.3s ease;
-  text-transform: capitalize;
-  cursor: pointer;
-}
-nav .profile .profile-link li a {
-  display: flex;
-  grid-gap: 10px;
-  font-size: 14px;
-  color: var(--dark);
-  width: 100%;
-  align-items: center;
-  transition: all 0.3s ease;
-  text-transform: capitalize;
-  cursor: pointer;
-}
-nav .profile .profile-link li:hover {
-  background: var(--grey);
-}
-
-/* NAVBAR */
 
 /* MAIN */
 main {
   width: 100%;
   padding: 24px 20px 20px 20px;
 }
+
 main .title {
   font-size: 28px;
   font-weight: 600;
   margin-bottom: 10px;
   text-transform: capitalize;
 }
+
 main .info-data {
   margin-top: 36px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
+  justify-content: center;
 }
-main .info-data .card {
+
+main .card {
+  width: 100%;
   padding: 20px;
   border-radius: 10px;
   background: var(--light);
   box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.05);
-}
-main .card {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: start;
   flex-direction: column;
 }
+
 main .card h2 {
   font-size: 24px;
   font-weight: 600;
 }
+
+main .card img {
+  width: 100%;
+  height: 130px;
+  border-radius: 6px 6px 0 0;
+  object-fit: cover;
+}
+
+main .card span {
+  color: var(--dark-grey);
+  font-size: 14px;
+}
+
+main .card form {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+main .card form > button {
+  padding: 5px 10px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
 main .data {
   display: flex;
   grid-gap: 20px;
   margin-top: 20px;
   flex-wrap: wrap;
 }
+
 main .data .content-data {
   flex-grow: 1;
   flex-basis: 400px;
@@ -262,20 +188,24 @@ main .data .content-data {
   align-items: center;
   margin-bottom: 24px;
 }
+
 main .content-data h3 {
   font-size: 20px;
   font-weight: 600;
 }
+
 main .content-data .chart {
   width: 100%;
   max-width: 100%;
   overflow-x: auto;
   scrollbar-width: none;
 }
+
 main .content-data .chart::-webkit-scrollbar,
 main .content-data .karyawan-table::-webkit-scrollbar {
   display: none;
 }
+
 table.karyawan-table {
   width: 100%;
   max-height: 400px;
@@ -317,3 +247,46 @@ table.karyawan-table tbody:last-child tr:last-child td:last-child {
     transition: all 0.3s ease;
   }
 }
+
+/* Menu.php */
+main.menu-head {
+  display: flex;
+  flex-direction: row;
+}
+
+main .menu-head {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+main .menu-head a > button {
+  font-size: 1em;
+  padding: 10px;
+  cursor: pointer;
+  background-color: transparent;
+  border: 2px solid var(--blue);
+  color: var(--blue);
+  font-weight: bold;
+  border-radius: 5px;
+  transition: all ease-in-out 0.1s;
+}
+
+main .menu-head a > button:hover {
+  background-color: var(--blue);
+  color: var(--grey);
+}
+
+main .menu-head a > button:active {
+  transform: scale(0.95);
+}
+
+.info-data.center {
+  align-items: center;
+}
+
+.card.menu {
+  align-items: center;
+}
+/* Menu.php */
