--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,447 +1,494 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap");
 
 * {
-  font-family: "Open Sans", sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	font-family: "Open Sans", sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 :root {
-  --grey: #f1f0f6;
-  --dark-grey: #8d8d8d;
-  --light: #fff;
-  --dark: #000;
-  --blue: #7571f1;
-  --light-blue: #d0d3ff;
-  --dark-blue: #290ccd;
+	--grey: #f1f0f6;
+	--dark-grey: #8d8d8d;
+	--light: #fff;
+	--dark: #000;
+	--blue: #7571f1;
+	--light-blue: #d0d3ff;
+	--dark-blue: #290ccd;
 }
 
 html {
-  overflow-x: hidden;
+	overflow-x: hidden;
 }
 
 body {
-  background: var(--grey);
-  overflow-x: hidden;
-  height: 100vh;
+	background: var(--grey);
+	overflow-x: hidden;
+	height: 100vh;
 }
 
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 li {
-  list-style: none;
+	list-style: none;
 }
 
 .dropdown {
-  position: absolute;
-  top: calc(100% + 10px);
-  background: var(--light);
-  padding: 10px 0;
-  box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  width: 160px;
-  opacity: 0;
-  pointer-events: none;
-  transition: all 0.3s ease;
+	position: absolute;
+	top: calc(100% + 10px);
+	background: var(--light);
+	padding: 10px 0;
+	box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.1);
+	border-radius: 10px;
+	width: 160px;
+	opacity: 0;
+	pointer-events: none;
+	transition: all 0.3s ease;
 }
 
 .profile-link {
-  right: 0;
+	right: 0;
 }
 
 .more-link {
-  z-index: 10;
+	z-index: 10;
 }
 
 form.more {
-  position: relative;
+	position: relative;
 }
 
 .more-ic {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 .show.profile-link,
 .show.more-link {
-  opacity: 1;
-  pointer-events: visible;
-  top: 100%;
+	opacity: 1;
+	pointer-events: visible;
+	top: 100%;
 }
 
 .profile-link li a,
 .more-link li button {
-  padding: 10px 16px;
-  display: flex;
-  grid-gap: 10px;
-  font-size: 14px;
-  color: var(--dark);
-  align-items: center;
-  transition: all 0.3s ease;
-  text-transform: capitalize;
-  cursor: pointer;
+	padding: 10px 16px;
+	display: flex;
+	grid-gap: 10px;
+	font-size: 14px;
+	color: var(--dark);
+	align-items: center;
+	transition: all 0.3s ease;
+	text-transform: capitalize;
+	cursor: pointer;
 }
 
 .more-link li button {
-  width: 100%;
-  border: none;
-  background-color: transparent;
+	width: 100%;
+	border: none;
+	background-color: transparent;
 }
 
 .profile-link li a:hover,
 .more-link li button:hover {
-  background: var(--grey);
+	background: var(--grey);
 }
 
 /* CONTENT */
 #content {
-  position: relative;
-  width: calc(100% - 260px);
-  left: 260px;
-  transition: all 0.3s ease;
+	position: relative;
+	width: calc(100% - 260px);
+	left: 260px;
+	transition: all 0.3s ease;
 }
 #sidebar.hide + #content {
-  width: calc(100% - 60px);
-  left: 60px;
+	width: calc(100% - 60px);
+	left: 60px;
 }
 
 /* MAIN */
 main {
-  width: 100%;
-  padding: 24px 20px 20px 20px;
+	width: 100%;
+	padding: 24px 20px 20px 20px;
 }
 
 main .title {
-  font-size: 28px;
-  font-weight: 600;
-  margin-bottom: 10px;
-  text-transform: capitalize;
+	font-size: 28px;
+	font-weight: 600;
+	margin-bottom: 10px;
+	text-transform: capitalize;
 }
 
 main .info-data {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  grid-gap: 20px;
-  justify-content: center;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+	grid-gap: 20px;
+	justify-content: center;
 }
 
 main .card {
-  width: 100%;
-  padding: 20px;
-  border-radius: 10px;
-  background: var(--light);
-  box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.05);
-  display: flex;
-  justify-content: space-between;
-  align-items: start;
-  flex-direction: column;
+	width: 100%;
+	padding: 20px;
+	border-radius: 10px;
+	background: var(--light);
+	box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.05);
+	display: flex;
+	justify-content: space-between;
+	align-items: start;
+	flex-direction: column;
 }
 
 main .card h2 {
-  font-size: 24px;
-  font-weight: 600;
+	font-size: 24px;
+	font-weight: 600;
 }
 
 main .card img {
-  width: 100%;
-  height: 130px;
-  border-radius: 6px 6px 0 0;
-  object-fit: cover;
+	width: 100%;
+	height: 130px;
+	border-radius: 6px 6px 0 0;
+	object-fit: cover;
 }
 
 main .card span {
-  color: var(--dark-grey);
-  font-size: 14px;
+	color: var(--dark-grey);
+	font-size: 14px;
 }
 
 main .card form {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
 }
 
 main .card form > button {
-  padding: 5px 10px;
-  font-weight: bold;
-  cursor: pointer;
+	padding: 5px 10px;
+	font-weight: bold;
+	cursor: pointer;
 }
 
 main .data {
-  display: flex;
-  grid-gap: 20px;
-  margin-top: 20px;
-  flex-wrap: wrap;
+	display: flex;
+	grid-gap: 20px;
+	margin-top: 20px;
+	flex-wrap: wrap;
 }
 
 main .data .content-data {
-  flex-grow: 1;
-  flex-basis: 400px;
-  padding: 20px;
-  background: var(--light);
-  border-radius: 10px;
-  box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  row-gap: 1em;
-  align-items: center;
-  margin-bottom: 24px;
+	flex-grow: 1;
+	flex-basis: 400px;
+	padding: 20px;
+	background: var(--light);
+	border-radius: 10px;
+	box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.1);
+	display: flex;
+	flex-direction: column;
+	row-gap: 1em;
+	align-items: center;
+	margin-bottom: 24px;
 }
 
 main .content-data h3 {
-  font-size: 20px;
-  font-weight: 600;
+	font-size: 20px;
+	font-weight: 600;
 }
 
 main .content-data .chart {
-  width: 100%;
-  max-width: 100%;
-  overflow-x: auto;
-  scrollbar-width: none;
+	width: 100%;
+	max-width: 100%;
+	overflow-x: auto;
+	scrollbar-width: none;
 }
 
 main .content-data .chart::-webkit-scrollbar,
 main .content-data .karyawan-table::-webkit-scrollbar {
-  display: none;
+	display: none;
 }
 
 table.karyawan-table {
-  width: 100%;
-  max-height: 400px;
-  overflow-y: auto;
-  scrollbar-width: none;
-  border-collapse: separate;
-  border-spacing: 0;
+	width: 100%;
+	max-height: 400px;
+	overflow-y: auto;
+	scrollbar-width: none;
+	border-collapse: separate;
+	border-spacing: 0;
 }
 
 table.karyawan-table td,
 table.karyawan-table th {
-  border: 1px solid var(--dark-grey);
-  text-align: left;
-  padding: 8px;
-  text-transform: capitalize;
+	border: 1px solid var(--dark-grey);
+	text-align: left;
+	padding: 8px;
+	text-transform: capitalize;
 }
 
 table.karyawan-table thead tr th:first-child {
-  border-radius: 5px 0 0 0;
+	border-radius: 5px 0 0 0;
 }
 table.karyawan-table thead tr th:last-child {
-  border-radius: 0 5px 0 0;
+	border-radius: 0 5px 0 0;
 }
 table.karyawan-table tbody:last-child tr:last-child td:first-child {
-  border-radius: 0 0 0 5px;
+	border-radius: 0 0 0 5px;
 }
 table.karyawan-table tbody:last-child tr:last-child td:last-child {
-  border-radius: 0 0 5px 0;
+	border-radius: 0 0 5px 0;
 }
 
 /* MAIN */
 /* CONTENT */
 
 @media screen and (max-width: 768px) {
-  #content {
-    position: relative;
-    width: calc(100% - 60px);
-    transition: all 0.3s ease;
-    overflow-y: auto;
-    height: 100vh;
-  }
+	#content {
+		position: relative;
+		width: calc(100% - 60px);
+		transition: all 0.3s ease;
+		overflow-y: auto;
+		height: 100vh;
+	}
 
-  .order-container {
-    flex-direction: column;
-    row-gap: 2em;
-    overflow-y: auto;
-  }
+	.order-container {
+		flex-direction: column;
+		row-gap: 2em;
+		overflow-y: auto;
+	}
+
+	.transaction {
+		flex-direction: column;
+		row-gap: 2em;
+	}
 }
 
 /* Menu.php */
 
 main .menu-head {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 36px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 36px;
 }
 
 main .menu-head a > button {
-  font-size: 1em;
-  padding: 10px;
-  cursor: pointer;
-  background-color: transparent;
-  border: 2px solid var(--blue);
-  color: var(--blue);
-  font-weight: bold;
-  border-radius: 5px;
-  transition: all ease-in-out 0.1s;
+	font-size: 1em;
+	padding: 10px;
+	cursor: pointer;
+	background-color: transparent;
+	border: 2px solid var(--blue);
+	color: var(--blue);
+	font-weight: bold;
+	border-radius: 5px;
+	transition: all ease-in-out 0.1s;
 }
 
 main .menu-head a > button:hover {
-  background-color: var(--blue);
-  color: var(--grey);
+	background-color: var(--blue);
+	color: var(--grey);
 }
 
 main .menu-head a > button:active {
-  transform: scale(0.95);
+	transform: scale(0.95);
 }
 
 .info-data.center {
-  align-items: center;
-  width: 100%;
+	align-items: center;
+	width: 100%;
 }
 /* Menu.php */
 
 /* Karyawan.php */
 table.user-data {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  padding: 20px;
-  border-radius: 10px;
-  background: var(--light);
-  margin-top: 36px;
-  width: 100%;
-  overflow-x: auto;
-  scrollbar-width: none;
-  border-collapse: separate;
-  border-spacing: 0;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+	padding: 20px;
+	border-radius: 10px;
+	background: var(--light);
+	margin-top: 36px;
+	overflow-x: auto;
+	scrollbar-width: none;
+	border-collapse: separate;
+	border-spacing: 0;
 }
 
 table.user-data::-webkit-scrollbar {
-  display: none;
+	display: none;
 }
 
 table.user-data tr > td,
 table.user-data tr > th {
-  border: 1px solid var(--dark-grey);
-  text-align: left;
-  padding: 10px;
-  text-transform: capitalize;
+	border: 1px solid var(--dark-grey);
+	text-align: left;
+	padding: 10px;
+	text-transform: capitalize;
 }
 
 table.user-data tr > td:nth-child(3) {
-  text-transform: none;
+	text-transform: none;
 }
 
 table.user-data tr > td button {
-  color: var(--grey);
-  background-color: var(--dark-blue);
-  border-radius: 5px;
-  cursor: pointer;
-  padding: 5px 10px;
-  border: none;
-  text-align: center;
-  margin-right: 10px;
-  transition: all ease-in-out 0.1s;
+	color: var(--grey);
+	background-color: var(--dark-blue);
+	border-radius: 5px;
+	cursor: pointer;
+	padding: 5px 10px;
+	border: none;
+	text-align: center;
+	margin-right: 10px;
+	transition: all ease-in-out 0.1s;
 }
 
 table.user-data tr > td button:hover {
-  background-color: #180681;
+	background-color: #180681;
 }
 
 table.user-data tr th:first-child {
-  border-radius: 5px 0 0 0;
+	border-radius: 5px 0 0 0;
 }
 table.user-data tr th:last-child {
-  border-radius: 0 5px 0 0;
+	border-radius: 0 5px 0 0;
 }
 table.user-data:last-child tr:last-child td:first-child {
-  border-radius: 0 0 0 5px;
+	border-radius: 0 0 0 5px;
 }
 table.user-data:last-child tr:last-child td:last-child {
-  border-radius: 0 0 5px 0;
+	border-radius: 0 0 5px 0;
 }
 
 table.user-data tr > td form {
-  display: flex;
+	display: flex;
 }
 /* Karyawan.php */
 
 /* Order.php */
 .cart {
-  border: none;
-  border-radius: 5px;
-  background-color: #06c406;
-  margin-top: 5px;
-  transition: all ease-in-out 0.1s;
+	border: none;
+	border-radius: 5px;
+	background-color: #06c406;
+	margin-top: 5px;
+	transition: all ease-in-out 0.1s;
 }
 
 .cart i {
-  color: var(--grey);
-  font-size: 20px;
+	color: var(--grey);
+	font-size: 20px;
 }
 
 .cart:hover {
-  background-color: #048f04;
+	background-color: #048f04;
 }
 
 .cart.after {
-  background-color: #bb0000;
-  cursor: not-allowed;
+	background-color: #bb0000;
+	cursor: not-allowed;
 }
 
 .order-list {
-  max-width: 500px;
-  width: 100%;
-  background: var(--light);
-  padding: 25px;
-  border-radius: 8px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-  margin-top: 2em;
+	max-width: 500px;
+	width: 100%;
+	background: var(--light);
+	padding: 25px;
+	border-radius: 8px;
+	box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+	margin-top: 2em;
 }
 
 .order-container {
-  display: flex;
-  column-gap: 1.5em;
-  justify-content: space-between;
-  align-items: top;
+	display: flex;
+	column-gap: 1.5em;
+	justify-content: space-between;
+	align-items: top;
 }
 
 .keranjang {
-  width: 100%;
-  max-width: 350px;
-  padding: 20px;
-  border-radius: 10px;
-  height: fit-content;
-  background: var(--light);
-  box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.05);
+	width: 100%;
+	max-width: 350px;
+	padding: 20px;
+	border-radius: 10px;
+	height: fit-content;
+	background: var(--light);
+	box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.05);
 }
 
 table.draft_order {
-  table-layout: fixed;
-  margin-top: 1em;
-  text-align: left;
+	table-layout: fixed;
+	margin-top: 1em;
+	text-align: left;
 }
 
 table.draft_order input[type="text"] {
-  width: 100%;
+	width: 100%;
 }
 
 table.draft_order button {
-  padding: 2px;
+	padding: 2px;
 }
 
 .bottom-row {
-  margin-top: 10px;
-  font-weight: bold;
+	margin-top: 10px;
+	font-weight: bold;
 }
 
 .process-order {
-  border: none;
-  border-radius: 10px;
-  padding: 0.5em 1em;
-  font-weight: bold;
-  background-color: var(--blue);
-  color: var(--light);
-  transition: all ease-in-out 0.1s;
-  cursor: pointer;
+	border: none;
+	border-radius: 10px;
+	padding: 0.5em 1em;
+	font-weight: bold;
+	background-color: var(--blue);
+	color: var(--light);
+	transition: all ease-in-out 0.1s;
+	cursor: pointer;
 }
 
 .process-order:hover {
-  background-color: var(--dark-blue);
+	background-color: var(--dark-blue);
 }
 
 .process-order:active {
-  transform: scale(0.95);
+	transform: scale(0.95);
 }
 /* Order.php */
+
+/* Transaksi.php */
+.transaction {
+	margin-top: 2em;
+	display: flex;
+	justify-content: center;
+	column-gap: 2em;
+}
+
+.before-payment {
+	max-width: 400px;
+}
+
+.before-payment,
+.previous-transaction {
+	background: var(--light);
+	width: 100%;
+	padding: 25px;
+	border-radius: 8px;
+	box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+	display: flex;
+	flex-direction: column;
+	row-gap: 0.5em;
+}
+
+.before-payment table,
+.previous-transaction table {
+	width: 100%;
+}
+
+.before-payment table tr > th,
+.previous-transaction table tr > th {
+	text-align: start;
+}
+
+.action {
+	position: relative;
+}
+
+.action .more-link {
+	width: fit-content;
+}
+/* Transaksi.php */
